--- a/data/main.ipynb
+++ b/data/main.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: faker in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (33.0.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.4 in /Users/nono/Library/Python/3.12/lib/python/site-packages (from faker) (2.9.0.post0)\n",
-      "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from faker) (4.11.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/nono/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.4->faker) (1.16.0)\n",
+      "^C\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
+      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,25 +280,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       venue_id  seat_number    section     row seat_type\n",
-      "0             1            1  Section-8   Row-8   Regular\n",
-      "1             1            2  Section-4   Row-6   Regular\n",
-      "2             1            3  Section-3  Row-34   Regular\n",
-      "3             1            4  Section-7  Row-40   Regular\n",
-      "4             1            5  Section-9  Row-13       VIP\n",
-      "...         ...          ...        ...     ...       ...\n",
-      "19975        20          995  Section-9  Row-14   Regular\n",
-      "19976        20          996  Section-6  Row-14   Regular\n",
-      "19977        20          997  Section-8   Row-3   Regular\n",
-      "19978        20          998  Section-7  Row-16       VIP\n",
-      "19979        20          999  Section-2  Row-32       VIP\n",
+      "       venue_id  seat_number     section     row   seat_type\n",
+      "0             1            1   Section-7  Row-37     Regular\n",
+      "1             1            2  Section-10  Row-15     Regular\n",
+      "2             1            3   Section-6  Row-11     Regular\n",
+      "3             1            4   Section-1  Row-26     Regular\n",
+      "4             1            5   Section-6  Row-16     Regular\n",
+      "...         ...          ...         ...     ...         ...\n",
+      "19975        20          995   Section-9  Row-35         VIP\n",
+      "19976        20          996   Section-4  Row-25     Regular\n",
+      "19977        20          997   Section-2  Row-17  Wheelchair\n",
+      "19978        20          998   Section-5   Row-2     Regular\n",
+      "19979        20          999   Section-6  Row-32     Regular\n",
       "\n",
       "[19980 rows x 5 columns]\n"
      ]
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,24 +334,39 @@
      "output_type": "stream",
      "text": [
       "      order_id  user_id  total_amount                 order_date    status\n",
-      "0            1      281        899.09 2024-03-10 20:58:59.397209   Pending\n",
-      "1            2      379        781.36 2024-04-20 13:43:28.334022      Paid\n",
-      "2            3      124        519.91 2024-04-10 17:26:28.088871      Paid\n",
-      "3            4      198        339.74 2024-04-14 19:50:42.212232  Canceled\n",
-      "4            5      399        118.61 2024-09-17 18:10:12.263835   Pending\n",
+      "0            1       97        488.86 2024-07-23 00:09:45.191389   Pending\n",
+      "1            2      514        761.87 2024-05-13 16:42:34.381890      Paid\n",
+      "2            3      321        829.34 2024-02-15 22:12:33.302872      Paid\n",
+      "3            4      943        461.69 2024-08-23 09:11:10.727197  Canceled\n",
+      "4            5      642        883.84 2024-08-19 20:59:14.894584      Paid\n",
       "...        ...      ...           ...                        ...       ...\n",
-      "1195      1196      464        203.64 2024-08-20 06:08:12.074056      Paid\n",
-      "1196      1197      110        247.77 2024-01-17 03:38:38.675454   Pending\n",
-      "1197      1198       30        655.29 2024-08-12 16:52:40.181461      Paid\n",
-      "1198      1199      365        719.00 2024-01-29 02:59:09.064264   Pending\n",
-      "1199      1200      285        224.14 2024-08-02 07:00:37.582676   Pending\n",
+      "1195      1196      180        496.23 2024-08-29 17:58:59.037413   Pending\n",
+      "1196      1197      850        343.06 2024-07-03 12:40:11.789115      Paid\n",
+      "1197      1198      194        229.54 2024-09-26 00:06:19.485455   Pending\n",
+      "1198      1199      581        464.65 2024-11-24 14:23:34.427061      Paid\n",
+      "1199      1200      748        535.36 2024-05-16 06:14:36.460963   Pending\n",
       "\n",
       "[1200 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "import numpy as np\n",
+    "from faker import Faker\n",
+    "\n",
+    "fake = Faker()\n",
+    "\n",
     "# ORDER\n",
+    "user_num = 1000\n",
+    "venue_num = 20\n",
+    "event_num = 300\n",
+    "payment_num = 1400\n",
+    "order_num = 1200\n",
+    "ticket_num = 1000\n",
+    "seat_num = 1000\n",
+    "\n",
     "orders = []\n",
     "payments = []\n",
     "tickets = []\n",
@@ -366,7 +380,7 @@
     "for i in range(1, order_num + 1):\n",
     "    orders.append({\n",
     "        \"order_id\": i,\n",
-    "        \"user_id\": random.randint(1, user_users),\n",
+    "        \"user_id\": random.randint(1, user_num),\n",
     "        \"total_amount\": round(random.uniform(100, 1000), 2),\n",
     "        \"order_date\": fake.date_time_this_year(),\n",
     "        \"status\": random.choices(order_statuses, order_statuses_weights)[0],\n",
@@ -375,13 +389,23 @@
     "    if (orders[i-1]['status'] == 'Paid'):\n",
     "        total_amount = 0\n",
     "        for j in range(random.randint(1, 5)):\n",
+    "            event = random.randint(1, event_num)\n",
     "            ticket = {\n",
     "                \"ticket_id\": len(tickets) + 1,\n",
-    "                \"event_id\": random.randint(1, event_num + 1),\n",
-    "                \"seat_number\": random.randint(1, 1000),\n",
+    "                \"event_id\": event,\n",
+    "                \"vanue_id\": 0,\n",
+    "                \"seat_number\": 0,\n",
     "                \"price\": round(random.uniform(50, 200), 2),\n",
     "                \"status\": random.choices(ticket_statuses, ticket_statuses_weights)[0],\n",
     "            }\n",
+    "            \n",
+    "            while True:\n",
+    "                seat = random.choice(seats)\n",
+    "                if ((seat['venue_id'], seat['seat_number'], event) not in [(t['vanue_id'], t['seat_number'], t['event_id']) for t in tickets]):\n",
+    "                    ticket['vanue_id'] = seat['venue_id']\n",
+    "                    ticket['seat_number'] = seat['seat_number']\n",
+    "                    break\n",
+    "                \n",
     "            tickets.append(ticket)\n",
     "            total_amount += ticket['price']\n",
     "\n",
@@ -405,6 +429,145 @@
     "tickets_df.to_csv(\"tickets.csv\", index=False)\n",
     "\n",
     "print(orders_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate seat found, retrying... {'venue_id': 9, 'seat_number': 5, 'section': 'Section-4', 'row': 'Row-40', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 4, 'seat_number': 854, 'section': 'Section-5', 'row': 'Row-29', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 17, 'seat_number': 541, 'section': 'Section-4', 'row': 'Row-8', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 11, 'seat_number': 686, 'section': 'Section-7', 'row': 'Row-18', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 18, 'seat_number': 689, 'section': 'Section-8', 'row': 'Row-12', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 1, 'seat_number': 713, 'section': 'Section-4', 'row': 'Row-35', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 13, 'seat_number': 999, 'section': 'Section-2', 'row': 'Row-8', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 1, 'seat_number': 804, 'section': 'Section-5', 'row': 'Row-38', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 1, 'seat_number': 411, 'section': 'Section-8', 'row': 'Row-11', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 6, 'seat_number': 726, 'section': 'Section-2', 'row': 'Row-5', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 5, 'seat_number': 158, 'section': 'Section-5', 'row': 'Row-7', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 15, 'seat_number': 512, 'section': 'Section-4', 'row': 'Row-27', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 3, 'seat_number': 62, 'section': 'Section-10', 'row': 'Row-31', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 19, 'seat_number': 794, 'section': 'Section-10', 'row': 'Row-9', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 5, 'seat_number': 379, 'section': 'Section-7', 'row': 'Row-9', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 8, 'seat_number': 33, 'section': 'Section-10', 'row': 'Row-25', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 4, 'seat_number': 92, 'section': 'Section-3', 'row': 'Row-24', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 15, 'seat_number': 602, 'section': 'Section-1', 'row': 'Row-11', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 4, 'seat_number': 69, 'section': 'Section-9', 'row': 'Row-8', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 15, 'seat_number': 120, 'section': 'Section-5', 'row': 'Row-15', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 13, 'seat_number': 111, 'section': 'Section-3', 'row': 'Row-38', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 3, 'seat_number': 249, 'section': 'Section-2', 'row': 'Row-1', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 11, 'seat_number': 278, 'section': 'Section-5', 'row': 'Row-25', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 19, 'seat_number': 878, 'section': 'Section-4', 'row': 'Row-20', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 20, 'seat_number': 853, 'section': 'Section-6', 'row': 'Row-11', 'seat_type': 'VIP'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 5, 'seat_number': 443, 'section': 'Section-1', 'row': 'Row-20', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 17, 'seat_number': 42, 'section': 'Section-3', 'row': 'Row-13', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 13, 'seat_number': 242, 'section': 'Section-6', 'row': 'Row-3', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 9, 'seat_number': 956, 'section': 'Section-9', 'row': 'Row-6', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 16, 'seat_number': 272, 'section': 'Section-6', 'row': 'Row-8', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 5, 'seat_number': 575, 'section': 'Section-3', 'row': 'Row-31', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 9, 'seat_number': 30, 'section': 'Section-1', 'row': 'Row-16', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 15, 'seat_number': 758, 'section': 'Section-1', 'row': 'Row-21', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 18, 'seat_number': 736, 'section': 'Section-1', 'row': 'Row-5', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 2, 'seat_number': 741, 'section': 'Section-9', 'row': 'Row-23', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 9, 'seat_number': 496, 'section': 'Section-7', 'row': 'Row-10', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 19, 'seat_number': 70, 'section': 'Section-8', 'row': 'Row-20', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 5, 'seat_number': 443, 'section': 'Section-1', 'row': 'Row-20', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 16, 'seat_number': 630, 'section': 'Section-9', 'row': 'Row-33', 'seat_type': 'Wheelchair'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 10, 'seat_number': 417, 'section': 'Section-1', 'row': 'Row-29', 'seat_type': 'Regular'}\n",
+      "Duplicate seat found, retrying... {'venue_id': 15, 'seat_number': 173, 'section': 'Section-2', 'row': 'Row-39', 'seat_type': 'Regular'}\n",
+      "Fake data generated and saved to CSV files:\n",
+      "Seats:    venue_id  seat_number     section     row   seat_type\n",
+      "0         1            1  Section-10  Row-32     Regular\n",
+      "1         1            2  Section-10  Row-19  Wheelchair\n",
+      "2         1            3   Section-9   Row-8     Regular\n",
+      "3         1            4   Section-9  Row-33     Regular\n",
+      "4         1            5   Section-8  Row-11         VIP\n",
+      "Orders:    order_id  user_id  total_amount                 order_date    status\n",
+      "0         1      792        577.53 2024-05-31 19:39:14.039099  Canceled\n",
+      "1         2      987        708.97 2024-03-26 14:03:28.436472   Pending\n",
+      "2         3      180        706.34 2024-07-30 20:08:41.717982   Pending\n",
+      "3         4        7        701.94 2024-02-23 03:39:59.655737   Pending\n",
+      "4         5      634        982.05 2024-05-24 23:07:00.129050  Canceled\n",
+      "Tickets:    ticket_id  event_id  venue_id  seat_number   price     status\n",
+      "0          1       239        18          859  147.53  Available\n",
+      "1          2        44         2          741   52.13       Sold\n",
+      "2          3        39        11          402   90.91       Sold\n",
+      "3          4        34         3           50   56.64       Sold\n",
+      "4          5       258        11          565   56.83  Available\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "from faker import Faker\n",
+    "\n",
+    "fake = Faker()\n",
+    "\n",
+    "# Configuration\n",
+    "venue_num = 20\n",
+    "section_num = 5\n",
+    "seat_num_per_section = 150\n",
+    "\n",
+    "order_num = 1200\n",
+    "ticket_num = 1000\n",
+    "\n",
+    "# Generate Order Data\n",
+    "orders = []\n",
+    "for i in range(1, order_num + 1):\n",
+    "    orders.append({\n",
+    "        \"order_id\": i,\n",
+    "        \"user_id\": random.randint(1, 1000),\n",
+    "        \"total_amount\": round(random.uniform(100, 1000), 2),\n",
+    "        \"order_date\": fake.date_time_this_year(),\n",
+    "        \"status\": random.choice([\"Pending\", \"Paid\", \"Canceled\"]),\n",
+    "    })\n",
+    "\n",
+    "# Generate Ticket Data\n",
+    "tickets = []\n",
+    "for order in orders:\n",
+    "    if order[\"status\"] == \"Paid\":\n",
+    "        for _ in range(random.randint(1, 5)):  # Each order gets 1-5 tickets\n",
+    "            seat = random.choice(seats)\n",
+    "\n",
+    "            tickets.append({\n",
+    "                \"ticket_id\": len(tickets) + 1,\n",
+    "                \"event_id\": random.randint(1, 300),\n",
+    "                \"venue_id\": seat[\"venue_id\"],\n",
+    "                \"seat_number\": seat[\"seat_number\"],\n",
+    "                \"price\": round(random.uniform(50, 200), 2),\n",
+    "                \"status\": random.choice([\"Available\", \"Reserved\", \"Sold\"])\n",
+    "            })\n",
+    "\n",
+    "# Convert to DataFrames\n",
+    "seats_df = pd.DataFrame(seats)\n",
+    "orders_df = pd.DataFrame(orders)\n",
+    "tickets_df = pd.DataFrame(tickets)\n",
+    "\n",
+    "# Save to CSV\n",
+    "seats_df.to_csv(\"seats.csv\", index=False)\n",
+    "orders_df.to_csv(\"orders.csv\", index=False)\n",
+    "tickets_df.to_csv(\"tickets.csv\", index=False)\n",
+    "\n",
+    "print(\"Fake data generated and saved to CSV files:\")\n",
+    "print(\"Seats:\", seats_df.head())\n",
+    "print(\"Orders:\", orders_df.head())\n",
+    "print(\"Tickets:\", tickets_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if every ticket has only appear once in every seat"
    ]
   }
  ],
