--- a/data/main.ipynb
+++ b/data/main.ipynb
@@ -326,25 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      order_id  user_id  total_amount                 order_date    status\n",
-      "0            1       97        488.86 2024-07-23 00:09:45.191389   Pending\n",
-      "1            2      514        761.87 2024-05-13 16:42:34.381890      Paid\n",
-      "2            3      321        829.34 2024-02-15 22:12:33.302872      Paid\n",
-      "3            4      943        461.69 2024-08-23 09:11:10.727197  Canceled\n",
-      "4            5      642        883.84 2024-08-19 20:59:14.894584      Paid\n",
-      "...        ...      ...           ...                        ...       ...\n",
-      "1195      1196      180        496.23 2024-08-29 17:58:59.037413   Pending\n",
-      "1196      1197      850        343.06 2024-07-03 12:40:11.789115      Paid\n",
-      "1197      1198      194        229.54 2024-09-26 00:06:19.485455   Pending\n",
-      "1198      1199      581        464.65 2024-11-24 14:23:34.427061      Paid\n",
-      "1199      1200      748        535.36 2024-05-16 06:14:36.460963   Pending\n",
+      "      order_id  user_id  total_amount                 order_date   status\n",
+      "0            1      641        482.79 2024-07-12 15:28:16.508385  Pending\n",
+      "1            2       18        261.14 2024-08-28 08:30:20.350899  Pending\n",
+      "2            3      938        470.86 2024-07-05 03:19:51.555697     Paid\n",
+      "3            4      585        510.83 2024-04-05 09:18:53.958235  Pending\n",
+      "4            5      681        206.21 2024-11-18 05:27:01.016830  Pending\n",
+      "...        ...      ...           ...                        ...      ...\n",
+      "1195      1196       77        966.31 2024-04-26 19:14:05.377333     Paid\n",
+      "1196      1197      683        780.19 2024-07-18 14:24:31.672278  Pending\n",
+      "1197      1198      696        768.58 2024-02-03 11:16:10.702141  Pending\n",
+      "1198      1199      639        681.01 2024-10-11 23:46:40.503668     Paid\n",
+      "1199      1200      877        569.47 2024-01-15 17:33:22.406843     Paid\n",
       "\n",
       "[1200 rows x 5 columns]\n"
      ]
@@ -371,7 +371,7 @@
     "payments = []\n",
     "tickets = []\n",
     "order_statuses = [\"Pending\", \"Paid\", \"Canceled\"]\n",
-    "ticket_statuses = [\"Available\", \"Reserved\", \"Sold\"]\n",
+    "ticket_statuses = [\"Youth\", \"Adult\", \"Senior\"] # youth, adult, senior\n",
     "payment_methods = [\"Credit Card\", \"PayPal\", \"Bank Transfer\"]\n",
     "payment_statuses = [\"Pending\", \"Completed\", \"Failed\"]\n",
     "payment_statuses_weights = [0.7, 0.2, 0.1]\n",
@@ -393,7 +393,8 @@
     "            ticket = {\n",
     "                \"ticket_id\": len(tickets) + 1,\n",
     "                \"event_id\": event,\n",
-    "                \"vanue_id\": 0,\n",
+    "                \"order_id\": i,\n",
+    "                \"venue_id\": 0,\n",
     "                \"seat_number\": 0,\n",
     "                \"price\": round(random.uniform(50, 200), 2),\n",
     "                \"status\": random.choices(ticket_statuses, ticket_statuses_weights)[0],\n",
@@ -401,8 +402,8 @@
     "            \n",
     "            while True:\n",
     "                seat = random.choice(seats)\n",
-    "                if ((seat['venue_id'], seat['seat_number'], event) not in [(t['vanue_id'], t['seat_number'], t['event_id']) for t in tickets]):\n",
-    "                    ticket['vanue_id'] = seat['venue_id']\n",
+    "                if ((seat['venue_id'], seat['seat_number'], event) not in [(t['venue_id'], t['seat_number'], t['event_id']) for t in tickets]):\n",
+    "                    ticket['venue_id'] = seat['venue_id']\n",
     "                    ticket['seat_number'] = seat['seat_number']\n",
     "                    break\n",
     "                \n",
@@ -418,6 +419,17 @@
     "            \"status\": \"Completed\",\n",
     "        }\n",
     "        payments.append(payment)\n",
+    "    elif (orders[i-1]['status'] == 'Pending'):\n",
+    "        payment = {\n",
+    "            \"payment_id\": len(payments) + 1,\n",
+    "            \"order_id\": i,\n",
+    "            \"payment_date\": fake.date_time_this_year(),\n",
+    "            \"amount\": orders[i-1]['total_amount'],\n",
+    "            \"method\": random.choice(payment_methods),\n",
+    "            \"status\": \"Pending\",\n",
+    "        }\n",
+    "        payments.append(payment)\n",
+    "        \n",
     "        \n",
     "orders_df = pd.DataFrame(orders)\n",
     "orders_df.to_csv(\"orders.csv\", index=False)\n",
