--- a/data/main.ipynb
+++ b/data/main.ipynb
@@ -326,25 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      order_id  user_id  total_amount                 order_date   status\n",
-      "0            1      641        482.79 2024-07-12 15:28:16.508385  Pending\n",
-      "1            2       18        261.14 2024-08-28 08:30:20.350899  Pending\n",
-      "2            3      938        470.86 2024-07-05 03:19:51.555697     Paid\n",
-      "3            4      585        510.83 2024-04-05 09:18:53.958235  Pending\n",
-      "4            5      681        206.21 2024-11-18 05:27:01.016830  Pending\n",
-      "...        ...      ...           ...                        ...      ...\n",
-      "1195      1196       77        966.31 2024-04-26 19:14:05.377333     Paid\n",
-      "1196      1197      683        780.19 2024-07-18 14:24:31.672278  Pending\n",
-      "1197      1198      696        768.58 2024-02-03 11:16:10.702141  Pending\n",
-      "1198      1199      639        681.01 2024-10-11 23:46:40.503668     Paid\n",
-      "1199      1200      877        569.47 2024-01-15 17:33:22.406843     Paid\n",
+      "      order_id  user_id  total_amount                 order_date    status\n",
+      "0            1      436        757.33 2024-11-15 02:52:28.850966      Paid\n",
+      "1            2      305        314.72 2024-08-02 17:09:46.915889  Canceled\n",
+      "2            3       67        333.92 2024-08-06 02:17:38.955508   Pending\n",
+      "3            4      678        700.36 2024-04-22 05:03:20.384711      Paid\n",
+      "4            5      119        542.52 2024-04-18 13:59:15.870361   Pending\n",
+      "...        ...      ...           ...                        ...       ...\n",
+      "1195      1196      159        467.78 2024-07-27 04:59:12.547606      Paid\n",
+      "1196      1197      615        892.63 2024-05-10 03:21:03.859691   Pending\n",
+      "1197      1198      805        729.18 2024-08-21 08:53:37.508916      Paid\n",
+      "1198      1199      774        423.55 2024-09-25 10:26:38.975437      Paid\n",
+      "1199      1200       89        177.58 2024-01-16 23:10:07.125489   Pending\n",
       "\n",
       "[1200 rows x 5 columns]\n"
      ]
